--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    repositories {
+        google()
+    }
 }
 
 allprojects {
@@ -21,7 +24,7 @@ allprojects {
             resolutionStrategy.eachDependency { details ->
                 if (details.requested.group == 'com.android.support'
                         && !details.requested.name.contains('multidex')) {
-                    details.useVersion  "27.0.2"
+                    details.useVersion  "27.1.1"
                 }
             }
         }
@@ -35,4 +38,7 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+repositories {
+    google()
 }
