--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -1,20 +1,19 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion build_versions.target_sdk
+    compileSdkVersion 27
     defaultConfig {
         minSdkVersion build_versions.min_sdk
         targetSdkVersion build_versions.target_sdk
         versionCode 1
         versionName "1.0"
+
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     buildTypes {
         release {
             buildConfigField "boolean", "LOG_DEBUG", "true"
@@ -25,7 +24,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
@@ -39,19 +38,16 @@ dependencies {
     api deps.support.percent
     api deps.support.recyclerview
     api deps.constraint_layout
-
     // RxJava and retrofit
     api deps.rx_android
     api deps.rxjava2
     api deps.retrofit.runtime
     api deps.retrofit.gson
     api deps.persistent_cookie
-
     //Dagger
     api deps.dagger.runtime
     api deps.dagger.android
     api deps.dagger.android_support
-
     // other
     api deps.kotlin.stdlib
     api deps.event_bus
@@ -59,17 +55,14 @@ dependencies {
     api deps.permission
     api deps.utils
     api deps.glide
-
     //view
     api deps.photo_view
     api deps.easy_recycler
     api deps.material_dialog
     api deps.logger
     api deps.toasty
-
     //router
     api deps.arouter_api
-
     //annotationProcessor
     annotationProcessor deps.dagger.android_support_compiler
     annotationProcessor deps.dagger.compiler
