--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -24,23 +24,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '27.0.3'
 }
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     // Support libraries
-    api deps.support.app_compat
-    api deps.support.v4
-    api deps.support.v13
-    api deps.support.design
-    api deps.support.cardview
-    api deps.support.percent
-    api deps.support.recyclerview
-    api deps.constraint_layout
+    api "com.android.support:appcompat-v7:${rootProject.ext.versions.appcompat_version}"
+    api "com.android.support:support-v4:${rootProject.ext.versions.appcompat_version}"
+    api "com.android.support:support-v13:${rootProject.ext.versions.appcompat_version}"
+    api "com.android.support:percent:${rootProject.ext.versions.appcompat_version}"
+    api "com.android.support:recyclerview-v7:${rootProject.ext.versions.appcompat_version}"
+    api "com.android.support:cardview-v7:${rootProject.ext.versions.appcompat_version}"
+    api "com.android.support:design:${rootProject.ext.versions.appcompat_version}"
+    api "com.android.support.constraint:constraint-layout:${rootProject.ext.versions.constraint_layout}"
+    api "io.reactivex.rxjava2:rxjava:2.1.7"
+    api "io.reactivex.rxjava2:rxandroid:2.0.1"
     // RxJava and retrofit
-    api deps.rx_android
-    api deps.rxjava2
     api deps.retrofit.runtime
     api deps.retrofit.gson
     api deps.persistent_cookie
@@ -66,4 +65,8 @@ dependencies {
     //annotationProcessor
     annotationProcessor deps.dagger.android_support_compiler
     annotationProcessor deps.dagger.compiler
+}
+
+repositories {
+    google()
 }
