--- a/module_app/build.gradle
+++ b/module_app/build.gradle
@@ -66,7 +66,6 @@ android {
             debuggable true
         }
     }
-    buildToolsVersion '27.0.3'
 }
 
 dependencies {
@@ -78,4 +77,8 @@ dependencies {
         implementation project(':module_girls')
         implementation project(':module_news')
     }
+}
+
+repositories {
+    google()
 }
