--- a/module_main/build.gradle
+++ b/module_main/build.gradle
@@ -41,11 +41,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '27.0.3'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     annotationProcessor deps.arouter_compiler
     implementation project(':lib_common')
+}
+
+repositories {
+    google()
 }
