--- a/versions.gradle
+++ b/versions.gradle
@@ -5,8 +5,8 @@
 ext.deps = [:]
 
 def versions = [:]
-versions.android_gradle_plugin = "3.1.3"
-versions.kotlin = "1.1.51"
+versions.android_gradle_plugin = '3.3.1'
+versions.kotlin = "1.3.0"
 versions.support = "27.1.1"
 versions.multidex = "1.0.2"
 versions.constraint_layout = "1.0.2"
@@ -33,7 +33,6 @@ versions.material_dialog = "0.9.6.0"
 //Arouter
 versions.arouter_compiler = "1.1.4"
 versions.arouter_api = "1.3.1"
-
 
 
 def deps = [:]
@@ -69,7 +68,7 @@ deps.dagger = dagger
 
 
 def kotlin = [:]
-kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
+kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
 deps.kotlin = kotlin
