--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,41 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    apply from: 'versions.gradle'
-    apply from: 'support.gradle'
-    addRepos(repositories)
+//    apply from: 'versions.gradle'
+//    apply from: 'support.gradle'
+//    addRepos(repositories)
+    ext{
+        kotlin_version = '1.3.20'
+        appcompat_version = '27.1.1'
+        constraint_layout = '1.1.3'
+        min_sdk = 16
+        target_sdk = 27
+        build_tools = "27.0.3"
+    }
     dependencies {
         /* classpath deps.android_gradle_plugin*/
-        classpath deps.android_gradle_plugin
-        classpath deps.kotlin.plugin
+        classpath "com.android.tools.build:gradle:3.3.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
     repositories {
         google()
+        jcenter()
     }
 }
 
 allprojects {
-    addRepos(repositories)
+//    addRepos(repositories)
+    repositories {
+        google()
+        jcenter()
+        mavenCentral()
+        //Add the JitPack repository
+        maven { url "https://jitpack.io" }
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    }
+
     // Android dependency 'com.android.support:design' has different version for the compile (25.3.1) and runtime (25.4.0) classpath.
     // You should manually set the same version via DependencyResolution
     subprojects {
@@ -42,4 +60,12 @@ task clean(type: Delete) {
 }
 repositories {
     google()
+}
+
+ext{
+    appcompat_version = '27.1.1'
+    constraint_layout = '1.1.3'
+    min_sdk = 16
+    target_sdk = 27
+    build_tools = "27.0.3"
 }
