--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 27
     defaultConfig {
-        minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
+        minSdkVersion min_sdk
+        targetSdkVersion target_sdk
         versionCode 1
         versionName "1.0"
 
@@ -29,42 +29,44 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     // Support libraries
-    api "com.android.support:appcompat-v7:${rootProject.ext.versions.appcompat_version}"
-    api "com.android.support:support-v4:${rootProject.ext.versions.appcompat_version}"
-    api "com.android.support:support-v13:${rootProject.ext.versions.appcompat_version}"
-    api "com.android.support:percent:${rootProject.ext.versions.appcompat_version}"
-    api "com.android.support:recyclerview-v7:${rootProject.ext.versions.appcompat_version}"
-    api "com.android.support:cardview-v7:${rootProject.ext.versions.appcompat_version}"
-    api "com.android.support:design:${rootProject.ext.versions.appcompat_version}"
-    api "com.android.support.constraint:constraint-layout:${rootProject.ext.versions.constraint_layout}"
-    api "io.reactivex.rxjava2:rxjava:2.1.7"
-    api "io.reactivex.rxjava2:rxandroid:2.0.1"
+    api "com.android.support:appcompat-v7:${rootProject.ext.appcompat_version}"
+    api "com.android.support:support-v4:${rootProject.ext.appcompat_version}"
+    api "com.android.support:support-v13:${rootProject.ext.appcompat_version}"
+    api "com.android.support:percent:${rootProject.ext.appcompat_version}"
+    api "com.android.support:recyclerview-v7:${rootProject.ext.appcompat_version}"
+    api "com.android.support:cardview-v7:${rootProject.ext.appcompat_version}"
+    api "com.android.support:design:${rootProject.ext.appcompat_version}"
+
+    api "com.android.support.constraint:constraint-layout:${rootProject.ext.constraint_layout}"
     // RxJava and retrofit
-    api deps.retrofit.runtime
-    api deps.retrofit.gson
-    api deps.persistent_cookie
+    api "io.reactivex.rxjava2:rxjava:2.2.2"
+    api "io.reactivex.rxjava2:rxandroid:2.1.0"
+    api "com.squareup.retrofit2:retrofit:2.4.0"
+    api "com.squareup.retrofit2:converter-gson:2.4.0"
+    api "com.squareup.retrofit2:converter-gson:2.4.0"
+    api "com.github.franmontiel:PersistentCookieJar:v1.0.1"
     //Dagger
-    api deps.dagger.runtime
-    api deps.dagger.android
-    api deps.dagger.android_support
+    api "com.google.dagger:dagger:2.17"
+    api "com.google.dagger:dagger-android:2.17"
+    api "com.google.dagger:dagger-android-support:2.17"
     // other
-    api deps.kotlin.stdlib
-    api deps.event_bus
-    api deps.gson
-    api deps.permission
-    api deps.utils
-    api deps.glide
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.greenrobot:eventbus:3.1.1"
+    api "com.google.code.gson:gson:2.8.5"
+    api "com.yanzhenjie:permission:1.1.2"
+    api "com.blankj:utilcode:1.10.0"
+    api "com.github.bumptech.glide:glide:3.8.0"
     //view
-    api deps.photo_view
-    api deps.easy_recycler
-    api deps.material_dialog
-    api deps.logger
-    api deps.toasty
+    api "com.github.chrisbanes:PhotoView:2.0.0"
+    api "com.jude:easyrecyclerview:4.4.2"
+    api "com.afollestad.material-dialogs:core:0.9.6.0"
+    api "com.orhanobut:logger:1.15"
+    api "com.github.GrenderG:Toasty:1.1.3"
     //router
-    api deps.arouter_api
+    api "com.alibaba:arouter-api:1.3.1"
     //annotationProcessor
-    annotationProcessor deps.dagger.android_support_compiler
-    annotationProcessor deps.dagger.compiler
+    annotationProcessor "com.google.dagger:dagger-compiler:2.17"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.17"
 }
 
 repositories {
