--- a/module_app/build.gradle
+++ b/module_app/build.gradle
@@ -24,8 +24,8 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.guiying.module"
-        minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
+        minSdkVersion min_sdk
+        targetSdkVersion target_sdk
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -70,7 +70,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation deps.support.multidex
+    implementation "com.android.support:multidex:1.0.3"
     implementation project(':lib_common')
     if (!isModule.toBoolean()) {
         implementation project(':module_main')
