--- a/module_main/build.gradle
+++ b/module_main/build.gradle
@@ -7,8 +7,8 @@ if (isModule.toBoolean()) {
 android {
     compileSdkVersion 27
     defaultConfig {
-        minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
+        minSdkVersion min_sdk
+        targetSdkVersion target_sdk
         versionCode 1
         versionName "1.0"
 
@@ -45,7 +45,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    annotationProcessor deps.arouter_compiler
+    annotationProcessor "com.alibaba:arouter-compiler:1.1.4"
     implementation project(':lib_common')
 }
 
