--- a/module_news/build.gradle
+++ b/module_news/build.gradle
@@ -5,10 +5,10 @@ if (isModule.toBoolean()) {
 }
 
 android {
-    compileSdkVersion build_versions.target_sdk
+    compileSdkVersion target_sdk
     defaultConfig {
-        minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
+        minSdkVersion min_sdk
+        targetSdkVersion target_sdk
         versionCode 1
         versionName "1.0"
 
@@ -48,7 +48,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    annotationProcessor deps.arouter_compiler
+    annotationProcessor "com.alibaba:arouter-compiler:1.1.4"
     implementation project(':lib_common')
 }
 
